Added a route in the MainController to acces the api, and it's twig file make an UML graph on how to represent a Mash

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -3,5 +3,8 @@
 {% block title %}BeerOCraft{% endblock %}
 
 {% block body %}
-    <div id="root"></div>
+    <h1>Coucou</h1>
+    <a href="/login">login</a>
+    <a href="/logout">logout</a>
+    <a href="/dashboard">dashboard</a>
 {% endblock %}
