--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,10 +16,10 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.realUsername) }}
-        {{ form_row(registrationForm.Password, {
+        {{ form_row(registrationForm.password, {
             label: 'Password'
         }) }}
-        {{ form_row(registrationForm.Confirm_password, {
+        {{ form_row(registrationForm.confirm_password, {
             label: 'Confirm your password'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
