--- a/templates/main/dashboard.html.twig
+++ b/templates/main/dashboard.html.twig
@@ -3,6 +3,6 @@
 {% block title %}BeerOCraft{% endblock %}
 
 {% block body %}
-    <div id="root"></div>
+{#    <div id="root"></div>#}
 {% endblock %}
 
