--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,16 +1,15 @@
-{% extends 'base.html.twig' %}
-<head>
-   {% block title %}BeerOCraft{% endblock %}
-   {% block stylesheets %}
-      {{ encore_entry_link_tags('app') }}
-   {% endblock %}
-   {% block javascripts %}
-      {{ encore_entry_script_tags('app') }}
-   {% endblock %}
-
-</head>
+{% block head %}
+{#    {% block title %}BeerOCraft{% endblock %}#}
+{#    {% block stylesheets %}#}
+{#        {{ encore_entry_link_tags('app') }}#}
+{#    {% endblock %}#}
+{#    {% block javascripts %}#}
+{#        {{ encore_entry_script_tags('app') }}#}
+{#    {% endblock %}#}
+<title>BeerOCraft</title>
+{% endblock %}
 
 {% block body %}
-{#   <div id="root"></div>#}
-{#   <script type="text/javascript" src="{{ asset('build/app.js') }}"></script>#}
+{#    <div id="root"></div>#}
+{#    <script type="text/javascript" src="{{ asset('build/app.js') }}"></script>#}
 {% endblock %}
